--- a/app/templates/patients/index/show.hbs
+++ b/app/templates/patients/index/show.hbs
@@ -9,16 +9,16 @@
     <tbody>
       <tr>
         <td>
-          <div class="bar fitness" style="width: {{model.challengeCompletion.fitness}}%">
-            <em class="percent">{{model.challengeCompletion.fitness}}%</em>
+          <div class="bar fitness" style="width: {{model.challengeFitness}}%">
+            <em class="percent">{{model.challengeFitness}}%</em>
             <em>Fitness</em>
           </div>
-          <div class="bar diet" style="width: {{model.challengeCompletion.diet}}%">
-            <em class="percent">{{model.challengeCompletion.diet}}%</em>
+          <div class="bar diet" style="width: {{model.challengeDiet}}%">
+            <em class="percent">{{model.challengeDiet}}%</em>
             <em>Diet</em>
           </div>
-          <div class="bar stress" style="width: {{model.challengeCompletion.stress}}%">
-            <em class="percent">{{model.challengeCompletion.stress}}%</em>
+          <div class="bar stress" style="width: {{model.challengeStress}}%">
+            <em class="percent">{{model.challengeStress}}%</em>
             <em>Strength</em>
           </div>
         </td>
