get health risk from parse

--- a/app/templates/patients/index.hbs
+++ b/app/templates/patients/index.hbs
@@ -26,7 +26,7 @@
             <div class="bar stress" style="width: {{patient.challengeStress}}%">{{patient.challengeStress}}%</div>
           </td>
           <td class="health-risk {{patient.healthRisk.change}}">
-            {{patient.healthRisk.status}}
+            {{patient.healthRisk}}
           </td>
           <td class="activity-level {{patient.activityLevel.change}}">
             {{patient.activityLevel.status}}
