--- a/app/templates/patients/index/show.hbs
+++ b/app/templates/patients/index/show.hbs
@@ -23,7 +23,7 @@
           </div>
         </td>
         <td class="health-risk {{model.healthRisk.change}}">
-          {{model.healthRisk.status}}
+          {{model.healthRisk}}
         </td>
         <td class="activity-level {{model.activityLevel.change}}">
           {{model.activityLevel.status}}
