begin Activity Level

--- a/app/templates/patients/index.hbs
+++ b/app/templates/patients/index.hbs
@@ -29,7 +29,7 @@
             {{patient.healthRisk}}
           </td>
           <td class="activity-level {{patient.activityLevel.change}}">
-            {{patient.activityLevel.status}}
+            {{patient.activityLevel}}
           </td>
         </tr>
       {{/each}}
