--- a/app/templates/patients/index/show.hbs
+++ b/app/templates/patients/index/show.hbs
@@ -26,7 +26,7 @@
           {{model.healthRisk}}
         </td>
         <td class="activity-level {{model.activityLevel.change}}">
-          {{model.activityLevel.status}}
+          {{model.activityLevel}}
         </td>
       </tr>
     </tbody>
