add moment.js. limit graphs to 30 days. pretty up graph popup

--- a/app/templates/patients/index/show.hbs
+++ b/app/templates/patients/index/show.hbs
@@ -41,7 +41,7 @@
             <em class="measurement">{{graph.measurement}}</em>
             <h2>{{graph.title}}</h2>
           </header>
-          {{area-chart values=graph.values}}
+          {{area-chart values=graph.values postUnits=graph.postUnits}}
         </section>
       </div>
     {{/each}}
