add patient stats: weight and waist circumference

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -237,6 +237,11 @@ section#patients
               text-transform: uppercase
             .demographic
               color: #848484
+          .stat-number
+            font-size: 5em
+            text-align: center
+            display: block
+            padding: 0.5em 0
 
   #view-all.button
     position: absolute
