add static UI images

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -237,6 +237,11 @@ section#patients
               text-transform: uppercase
             .demographic
               color: #848484
+          img
+            max-width: 100%
+            height: auto
+        &.span2
+          width: 100%
 
   #view-all.button
     position: absolute
