--- a/app/templates/patients/index/show.hbs
+++ b/app/templates/patients/index/show.hbs
@@ -34,6 +34,33 @@
 
   <div class="charts">
 
+    <div class="column">
+      <section class="area-chart">
+        <header>
+          <h2>Behavioral Risk Score</h2>
+        </header>
+        <img id="logo" src="assets/behavioral-risk-score.png"/>
+      </section>
+    </div>
+
+    <div class="column">
+      <section class="area-chart">
+        <header>
+          <h2>Health Belief Spectrum</h2>
+        </header>
+        <img id="logo" src="assets/health-belief-spectrum.png"/>
+      </section>
+    </div>
+
+    <div class="column span2">
+      <section class="area-chart">
+        <header>
+          <h2>Behavioral Risk Score Factors</h2>
+        </header>
+        <img id="logo" src="assets/behaviorial-risk-score-factors.png"/>
+      </section>
+    </div>
+
     {{#each model.charts as |chart|}}
       <div class="column">
         <section class="area-chart">
