change graph color and remove percentage. change strength to stress

--- a/app/templates/patients/index/show.hbs
+++ b/app/templates/patients/index/show.hbs
@@ -19,7 +19,7 @@
           </div>
           <div class="bar stress" style="width: {{model.challengeCompletion.stress}}%">
             <em class="percent">{{model.challengeCompletion.stress}}%</em>
-            <em>Strength</em>
+            <em>Stress</em>
           </div>
         </td>
         <td class="health-risk {{model.healthRisk.change}}">
