--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -295,6 +295,32 @@ section#patients
               margin-top: 45px
         &.span2
           width: 100%
+          .col
+            width: 20%
+            float: left
+            padding: $padding
+            .circle
+              background: red
+              text-align: center
+              color: white
+              position: relative
+              display: inline-block
+              width: 100%
+              height: 0
+              padding: 50% 0
+              border-radius: 50%
+              &.low
+                background: #71c639
+              &.moderate
+                background: #f89a3b
+              &.high
+                background: #c63939
+              p
+                display: block
+                margin-top: -25px
+                padding: $padding
+              &.healthy p
+                margin-top: -35px
 
   #view-all.button
     position: absolute
